--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "license": "ISC",
   "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321",
   "dependencies": {
+    "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "dotenv": "^16.4.7",
     "inquirer": "^12.3.2",
+    "node-cron": "^3.0.3",
+    "puppeteer": "^24.0.0",
+    "puppeteer-core": "^24.0.0",
     "validator": "^13.12.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
