--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "memetus-coingecko-scrapper",
   "version": "1.0.0",
   "description": "",
-  "main": "main.ts",
+  "main": "src/main.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "npx ts-node -r tsconfig-paths/register ./main.ts",
+    "dev": "npx ts-node -r tsconfig-paths/register ./src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +20,8 @@
     "node-cron": "^3.0.3",
     "puppeteer": "^24.0.0",
     "puppeteer-core": "^24.0.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "validator": "^13.12.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
