--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^22.10.6",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
