--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
+    "resolveJsonModule": true,
     "module": "CommonJS",
     "strict": true,
     "esModuleInterop": true,
@@ -8,7 +9,8 @@
     "rootDir": "./",
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "data/*": ["./data/*"]
     },
     "moduleResolution": "node"
   },
